# This file is part of multicharge.
# SPDX-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

option(
  'lapack',
  type: 'combo',
  value: 'auto',
  yield: true,
  choices: ['auto', 'mkl', 'mkl-rt', 'openblas', 'netlib', 'custom'],
  description : 'linear algebra backend',
)

option(
  'custom_libraries',
  type: 'array',
  value: [],
  yield: true,
  description: 'libraries to load for custom linear algebra backend',
)

option(
  'openmp',
  type: 'boolean',
  value: true,
  yield: true,
  description: 'use OpenMP parallelisation',
)

option(
  'ilp64',
  type: 'boolean',
  value: false,
  yield: true,
  description: 'enable ILP64 LAPACK/BLAS',
)
