# This file is part of multicharge.
# SPDX-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

subdir('model')
subdir('param')

srcs += files(
  'blas.F90',
  'charge.f90',
  'ewald.f90',
  'lapack.F90',
  'model.f90',
  'output.f90',
  'param.f90',
  'version.f90',
  'wignerseitz.f90',
  'cache.f90',
)
